k8s-config-dumpster/example-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: example-ingress
 annotations:
  nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
 rules:
  - host: busy-circuits.chicken-bones.com
    http:
     paths:
      - path: /
        pathType: Prefix
        backend:
         service:
          name: web
          port:
           number: 8080
