k8s-config-dumpster/ingress-routes.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-chicken-bones-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - busy-circuits.chicken-bones.com
    secretName: tls-secret
  rules:
  - host: busy-circuits.chicken-bones.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: webserver-svc
              port:
                number: 80
