k8s-config-dumpster/kubeflow-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeflow-dashboard-ingress
  labels:
    app: istio-ingressgateway
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
      # kubernetes.io/ingress.class: "public"
spec:
  ingressClassName: public
  tls:
  - hosts:
    - busy-circuits.chicken-bones.com
    secretName: tls-secret
  rules:
  - host: busy-circuits.chicken-bones.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: istio-ingressgateway-workload
              port:
                number: 80
